@@ -1,6 +1,6 @@
 AC_INIT(src/yelp-main.c)
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(yelp, 0.7)
+AM_INIT_AUTOMAKE(yelp, 0.8)
 
 AC_PROG_INTLTOOL
 
