@@ -1,5 +1,9 @@
 2002-05-21  Mikael Hallendal  <micke@codefactory.se>
 
+	* configure.in: bumped version to 0.8
+
+	* src/yelp-reader.c: fixed compile warning.
+
 	* src/yelp-uri.c: fixed so that external links are working too.
 
 	* src/yelp-view-toc.c: implemented jimmac's mockups.
